updated css for header

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,7 @@
 
 .header-container {
   background-color: $white-smoke;
-  padding: 0 30px;
+  padding: 10px 30px;
   display: flex;
   justify-content: space-between;
   .header-logo {
