--- a/src/components/ProductList/productList.scss
+++ b/src/components/ProductList/productList.scss
@@ -24,5 +24,12 @@
         color: $gray;
         font-size: 15px;
     }
+    .add-to-cart{
+        background-color: $white;
+        border-radius: 25px;
+        padding: 0 10px;
+        margin-top: 5px;
+        border: 2px solid $black;
+    }
   }
 }
